8167299: -XX:+PrintRelocations crashes the VM

Reviewed-by: kvn